examples/test/testpolicy11060.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11060
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key4: value36
      key0: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value43
          key39: value7
      podSelector:
        matchLabels:
          key17: value35
          key42: value27
          key39: value33
